<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/edt_display_demod"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:fontFamily="monospace"
                android:text="@string/simple_calculator"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/edt_display_demo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:fontFamily="monospace"
                android:gravity="end|bottom"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/edt_display"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="monospace"
                android:gravity="end|bottom"
                android:hint="@string/hintss"
                android:textColor="@color/white"
                android:textColorHint="#C61A1A"
                android:textSize="25sp"
                android:textStyle="italic"
                app:drawableBottomCompat="@drawable/line" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/grad_layout"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size"
                    tools:ignore="NestedWeights" />


                <Button
                    android:id="@+id/btn_mr"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/mr"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button

                    android:id="@+id/btn7"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_7"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn_mc"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/mc"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/deleted"
                    android:textColor="@color/white"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/btn_ce"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/ce"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_8"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_plus_min"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/plmi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/btn_percent"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/percent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />


                <Button
                    android:id="@+id/btn9"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_9"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/_6"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/three"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/dot"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/divide"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/btn_multi"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/multiplication"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="@dimen/all_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />

                <Button
                    android:id="@+id/btn_equals"
                    android:layout_width="@dimen/all_width"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/equal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/all_text_size" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>